:bug: Removed colors on mobile nav for testing

--- a/src/styles/AudienceCSS.css
+++ b/src/styles/AudienceCSS.css
@@ -39,7 +39,7 @@
 
 @media (max-width: 375px) {
   .aud-wrapper2 {
-    margin-top: 400px;
+    margin-top: 250px;
   }
 }
 
